--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ reqwest = "*"
 serde = "*"
 serde_json = "*"
 tokio = { version = "*", features = ["full"] }
-sqlx = { version = "*", features = [ "runtime-tokio", "tls-native-tls" ] }
+sqlx = { version = "*", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
+chrono = "*"
+dotenv = "*"
